--- a/pages/actions.mdx
+++ b/pages/actions.mdx
@@ -1,4 +1,4 @@
-import { Callout, Tabs, Steps } from 'nextra/components'
+import { Callout, Tabs, Steps } from 'nextra/components';
 
 # Actions
 
@@ -7,6 +7,7 @@ import { Callout, Tabs, Steps } from 'nextra/components'
 ## Inputs
 
 All actions require some form of input to function:
+
 - **Workflows**: Inputs are either manually entered or mapped from the output of a previous node.
 - **AI Agents**: Inputs are provided by the AI Agent. If additional information is needed, the agent will prompt for it.
 
@@ -21,6 +22,8 @@ All actions require some form of input to function:
     ### Workflow Example
     
     In a workflow, you might have an action that sends an email. The input could be mapped from data received in a previous step.
+
+    <iframe width="560" height="315" style={{marginTop: "20px"}} src="https://www.youtube.com/embed/KBq74YfBhXQ?si=m1NDIx7AiJZz_DrJ" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
 
 <Steps>
     ### Select app connection
@@ -44,7 +47,7 @@ All actions require some form of input to function:
     </Steps>
 
     **Or you can tell the agent to send an email about a specific topic to an email address and it will generate it's own content (or look up the content using it's provided apps/tools) and subject line**
-    
+
   </Tabs.Tab>
 </Tabs>
 
