--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,10 +22,10 @@ import { Steps, Cards, Card, Callout } from 'nextra/components';
           style={{ marginTop: '20px' }}
           src="https://www.youtube.com/embed/JwE3L8tmpJI?si=e84DZqRZPF9jHIkN"
           title="YouTube video player"
-          frameborder="0"
+          frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
         ></iframe>
 
         ### Connect to your third party applications
@@ -38,17 +38,17 @@ import { Steps, Cards, Card, Callout } from 'nextra/components';
           style={{ marginTop: '20px' }}
           src="https://www.youtube.com/embed/b83bJYakaR8?si=5d5fl0sok1imQFC_"
           title="YouTube video player"
-          frameborder="0"
+          frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
         ></iframe>
 
         ### Build an AI Agent
 
         Easily build an AI agent that can use your app connection to perform actions on your behalf.
 
-        <iframe width="560" height="315" style={{ marginTop: '20px' }} src="https://www.youtube.com/embed/kBk-swoAkY8?si=eVBmxzN0w_KVW22_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" style={{ marginTop: '20px' }} src="https://www.youtube.com/embed/kBk-swoAkY8?si=eVBmxzN0w_KVW22_" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
 
         ### Upload custom data to your knowledge notebooks
 
@@ -60,17 +60,117 @@ import { Steps, Cards, Card, Callout } from 'nextra/components';
           style={{ marginTop: '20px' }}
           src="https://www.youtube.com/embed/2V7A3IpyJbo?si=4RUriV0AB5bevQy1"
           title="YouTube video player"
-          frameborder="0"
+          frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
         ></iframe>
 
         ### Create your first workflow
 
         Workflows can be complex. Learn how triggers work and how actions can be configured.
 
-        <iframe width="560" height="315" style={{ marginTop: '20px' }} src="https://www.youtube.com/embed/csDLgJSMg-A?si=1c1zBpdwo4peTX7y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" style={{ marginTop: '20px' }} src="https://www.youtube.com/embed/csDLgJSMg-A?si=1c1zBpdwo4peTX7y" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
+
+        ### Variables
+
+        Create Variables that can be reused within your Workflows
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/TJEL2m7u07s?si=VG4_4tyZ0ng9bIWd"
+          title="YouTube video player"
+          frameBorder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
+        ></iframe>
+
+        ### Triggers
+
+        We support 4 types of triggers. Manually Run, Recurring Schedule, Listen for Webhook, and App triggers.
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/k6tjvCbD8ZA?si=i54wU01p2B5S6CER"
+          title="YouTube video player"
+          frameBorder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
+        ></iframe>
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/toptFpTdCgc?si=UOwv_rnYaSN1MrsS"
+          title="YouTube video player"
+          frameBorder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
+        ></iframe>
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/L8jHS5bR-28?si=kaCEllS90Gx8NHcC"
+          title="YouTube video player"
+          frameBorder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
+        ></iframe>
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/L74SujQRUhI?si=a9UJWaijHlu9bLgn"
+          title="YouTube video player"
+          frameBorder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
+        ></iframe>
+
+        ### Add Conditions to your Triggers
+
+        You may not want to run your workflow every time your triggers runs. You may want to add some conditions to your triggers.
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/HX1BvE4MbNA?si=oM-XJvx-Op5WN7AZ"
+          title="YouTube video player"
+          frameBorder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
+        ></iframe>
+
+        ### Passing data from one step to another
+
+        Passing data from one step to another is a fundamental concept when building workflows. Generate an output and then map it to another step.
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/KBq74YfBhXQ?si=2DwKFgM358TqyFBl"
+          title="YouTube video player"
+          frameBorder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
+        ></iframe>
 
     </Steps>
 
