--- a/pages/variables.mdx
+++ b/pages/variables.mdx
@@ -1,12 +1,25 @@
-import { Callout, Cards, Card, Steps } from 'nextra/components'
+import { Callout, Cards, Card, Steps } from 'nextra/components';
 
 # Variables
 
 You can create a **variable** in Lecca.io to use within workflow actions. This is useful for referencing common values like names, emails, phrases, dates, numbers, and more as a variable.
 
+<iframe
+  width="560"
+  height="315"
+  style={{ marginTop: '20px' }}
+  src="https://www.youtube.com/embed/TJEL2m7u07s?si=VG4_4tyZ0ng9bIWd"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
+
 ## Types of Variables
 
 There are four types of variables you can create:
+
 - **String**: Text values.
 - **Number**: Numeric values.
 - **Boolean**: True/False values.
@@ -17,7 +30,8 @@ There are four types of variables you can create:
 Variables can be created at both the **workspace** and **project** levels.
 
 <Callout emoji="💡">
-  Note: To create a project-level variable, select the desired project from the project dropdown when creating the variable.
+  Note: To create a project-level variable, select the desired project from the
+  project dropdown when creating the variable.
 </Callout>
 
 <Steps>
@@ -37,10 +51,10 @@ Select the **variable type**: String, Number, Boolean, or Date.
 
 Enter the variable details.
 
-### Save 
+### Save
 
 Save your variable.
-</Steps>
 
+</Steps>
 
 For further assistance, contact us at support@lecca.io.
