--- a/pages/connections.mdx
+++ b/pages/connections.mdx
@@ -16,10 +16,10 @@ Lecca.io's Connections feature allows you to integrate with your favorite third-
           style={{ marginTop: '20px' }}
           src="https://www.youtube.com/embed/b83bJYakaR8?si=5d5fl0sok1imQFC_"
           title="YouTube video player"
-          frameborder="0"
+          frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
         ></iframe>
 
 ## Key Features
