--- a/pages/knowledge.mdx
+++ b/pages/knowledge.mdx
@@ -10,10 +10,10 @@ Lecca.io Knowledge Notebooks enable you to store and reuse valuable knowledge fr
           style={{ marginTop: '20px' }}
           src="https://www.youtube.com/embed/2V7A3IpyJbo?si=4RUriV0AB5bevQy1"
           title="YouTube video player"
-          frameborder="0"
+          frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
         ></iframe>
 
 ## Configuring Knowledge Notebooks
