--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -10,10 +10,10 @@ Lecca.io's **Projects** feature serves as an organizational tool designed to fac
           style={{ marginTop: '20px' }}
           src="https://www.youtube.com/embed/JwE3L8tmpJI?si=e84DZqRZPF9jHIkN"
           title="YouTube video player"
-          frameborder="0"
+          frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
         ></iframe>
 
 <Callout emoji="📂" type="info">
