--- a/pages/workflows.mdx
+++ b/pages/workflows.mdx
@@ -12,10 +12,10 @@ Lecca.io's Workflow tools allow you to automate a series of actions. Workflows c
           style={{ marginTop: '20px' }}
           src="https://www.youtube.com/embed/2V7A3IpyJbo?si=4RUriV0AB5bevQy1"
           title="YouTube video player"
-          frameborder="0"
+          frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
+          referrerPolicy="strict-origin-when-cross-origin"
+          allowFullScreen
         ></iframe>
 
 Creating an effective workflow starts with understanding its purpose. Here are the three primary reasons you might create a workflow on Lecca.io:
