responsive youtube iframe

--- a/pages/connections.mdx
+++ b/pages/connections.mdx
@@ -10,17 +10,18 @@ Lecca.io's Connections feature allows you to integrate with your favorite third-
   usually integrate it quickly.
 </Callout>
 
-        <iframe
-          width="560"
-          height="315"
-          style={{ marginTop: '20px' }}
-          src="https://www.youtube.com/embed/b83bJYakaR8?si=5d5fl0sok1imQFC_"
-          title="YouTube video player"
-          frameBorder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerPolicy="strict-origin-when-cross-origin"
-          allowFullScreen
-        ></iframe>
+        <div style={{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', marginTop: '20px' }}>
+          <iframe
+            width="560"
+            height="315"
+            style={{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' }}            src="https://www.youtube.com/embed/b83bJYakaR8?si=5d5fl0sok1imQFC_"
+            title="YouTube video player"
+            frameBorder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerPolicy="strict-origin-when-cross-origin"
+            allowFullScreen
+          ></iframe>
+        </div>
 
 ## Key Features
 
