--- a/pages/triggers.mdx
+++ b/pages/triggers.mdx
@@ -10,33 +10,65 @@ Triggers initiate workflows and can be either polling-based or webhook-based.
 
 Use a Manually Run trigger to allow humans, agents, and other workflows to trigger your workflows.
 
-<iframe
-  width="560"
-  height="315"
-  style={{ marginTop: '20px' }}
-  src="https://www.youtube.com/embed/k6tjvCbD8ZA?si=i54wU01p2B5S6CER"
-  title="YouTube video player"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  referrerPolicy="strict-origin-when-cross-origin"
-  allowFullScreen
-></iframe>
+<div
+  style={{
+    position: 'relative',
+    paddingBottom: '56.25%',
+    height: 0,
+    overflow: 'hidden',
+    marginTop: '20px',
+  }}
+>
+  <iframe
+    width="560"
+    height="315"
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+    }}
+    src="https://www.youtube.com/embed/k6tjvCbD8ZA?si=i54wU01p2B5S6CER"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerPolicy="strict-origin-when-cross-origin"
+    allowFullScreen
+  ></iframe>
+</div>
 
 ### 2. Apps
 
 Apps have two types of triggers - Polling and Webhooks
 
-<iframe
-  width="560"
-  height="315"
-  style={{ marginTop: '20px' }}
-  src="https://www.youtube.com/embed/L74SujQRUhI?si=a9UJWaijHlu9bLgn"
-  title="YouTube video player"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  referrerPolicy="strict-origin-when-cross-origin"
-  allowFullScreen
-></iframe>
+<div
+  style={{
+    position: 'relative',
+    paddingBottom: '56.25%',
+    height: 0,
+    overflow: 'hidden',
+    marginTop: '20px',
+  }}
+>
+  <iframe
+    width="560"
+    height="315"
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+    }}
+    src="https://www.youtube.com/embed/L74SujQRUhI?si=a9UJWaijHlu9bLgn"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerPolicy="strict-origin-when-cross-origin"
+    allowFullScreen
+  ></iframe>
+</div>
 
 #### App Polling
 
@@ -57,30 +89,62 @@ Webhook triggers fire instantly once our servers receive the trigger from the ap
 
 The Recurring Schedule trigger allows you to configure a schedule to trigger your workflows on.
 
-<iframe
-  width="560"
-  height="315"
-  style={{ marginTop: '20px' }}
-  src="https://www.youtube.com/embed/toptFpTdCgc?si=UOwv_rnYaSN1MrsS"
-  title="YouTube video player"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  referrerPolicy="strict-origin-when-cross-origin"
-  allowFullScreen
-></iframe>
+<div
+  style={{
+    position: 'relative',
+    paddingBottom: '56.25%',
+    height: 0,
+    overflow: 'hidden',
+    marginTop: '20px',
+  }}
+>
+  <iframe
+    width="560"
+    height="315"
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+    }}
+    src="https://www.youtube.com/embed/toptFpTdCgc?si=UOwv_rnYaSN1MrsS"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerPolicy="strict-origin-when-cross-origin"
+    allowFullScreen
+  ></iframe>
+</div>
 
 ### 4. Listen for Webhook - Custom Webhook
 
 Send an HTTP Request to your workflow's webhook link to run the workflow.
 
-<iframe
-  width="560"
-  height="315"
-  style={{ marginTop: '20px' }}
-  src="https://www.youtube.com/embed/L8jHS5bR-28?si=kaCEllS90Gx8NHcC"
-  title="YouTube video player"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  referrerPolicy="strict-origin-when-cross-origin"
-  allowFullScreen
-></iframe>
+<div
+  style={{
+    position: 'relative',
+    paddingBottom: '56.25%',
+    height: 0,
+    overflow: 'hidden',
+    marginTop: '20px',
+  }}
+>
+  <iframe
+    width="560"
+    height="315"
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+    }}
+    src="https://www.youtube.com/embed/L8jHS5bR-28?si=kaCEllS90Gx8NHcC"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerPolicy="strict-origin-when-cross-origin"
+    allowFullScreen
+  ></iframe>
+</div>
