--- a/pages/variables.mdx
+++ b/pages/variables.mdx
@@ -4,17 +4,33 @@ import { Callout, Cards, Card, Steps } from 'nextra/components';
 
 You can create a **variable** in Lecca.io to use within workflow actions. This is useful for referencing common values like names, emails, phrases, dates, numbers, and more as a variable.
 
-<iframe
-  width="560"
-  height="315"
-  style={{ marginTop: '20px' }}
-  src="https://www.youtube.com/embed/TJEL2m7u07s?si=VG4_4tyZ0ng9bIWd"
-  title="YouTube video player"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  referrerPolicy="strict-origin-when-cross-origin"
-  allowFullScreen
-></iframe>
+<div
+  style={{
+    position: 'relative',
+    paddingBottom: '56.25%',
+    height: 0,
+    overflow: 'hidden',
+    marginTop: '20px',
+  }}
+>
+  <iframe
+    width="560"
+    height="315"
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+    }}
+    src="https://www.youtube.com/embed/TJEL2m7u07s?si=VG4_4tyZ0ng9bIWd"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerPolicy="strict-origin-when-cross-origin"
+    allowFullScreen
+  ></iframe>
+</div>
 
 ## Types of Variables
 
