--- a/pages/actions.mdx
+++ b/pages/actions.mdx
@@ -23,7 +23,9 @@ All actions require some form of input to function:
     
     In a workflow, you might have an action that sends an email. The input could be mapped from data received in a previous step.
 
-    <iframe width="560" height="315" style={{marginTop: "20px"}} src="https://www.youtube.com/embed/KBq74YfBhXQ?si=m1NDIx7AiJZz_DrJ" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
+    <div style={{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', marginTop: '20px' }}>
+      <iframe width="560" height="315"             style={{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' }} src="https://www.youtube.com/embed/KBq74YfBhXQ?si=m1NDIx7AiJZz_DrJ" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
+    </div>
 
 <Steps>
     ### Select app connection
