--- a/pages/agents.mdx
+++ b/pages/agents.mdx
@@ -2,7 +2,33 @@
 
 AI Agents in Lecca.io are dynamic, capable of performing actions on your behalf, enhancing productivity while integrating smoothly with your applications. This guide will walk you through setting up and managing AI Agents effectively.
 
-        <iframe width="560" height="315" style={{ marginTop: '20px' }} src="https://www.youtube.com/embed/kBk-swoAkY8?si=eVBmxzN0w_KVW22_" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
+<div
+  style={{
+    position: 'relative',
+    paddingBottom: '56.25%',
+    height: 0,
+    overflow: 'hidden',
+    marginTop: '20px',
+  }}
+>
+  <iframe
+    width="560"
+    height="315"
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+    }}
+    src="https://www.youtube.com/embed/kBk-swoAkY8?si=eVBmxzN0w_KVW22_"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerPolicy="strict-origin-when-cross-origin"
+    allowFullScreen
+  ></iframe>
+</div>
 
 ## Creating and Configuring AI Agents
 
