--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -4,17 +4,18 @@ import { Callout, Cards, Card } from 'nextra/components';
 
 Lecca.io's **Projects** feature serves as an organizational tool designed to facilitate automation processes and manage access to your components efficiently. Below is an overview of what Projects can do and how they benefit you:
 
-        <iframe
-          width="560"
-          height="315"
-          style={{ marginTop: '20px' }}
-          src="https://www.youtube.com/embed/JwE3L8tmpJI?si=e84DZqRZPF9jHIkN"
-          title="YouTube video player"
-          frameBorder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerPolicy="strict-origin-when-cross-origin"
-          allowFullScreen
-        ></iframe>
+        <div style={{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', marginTop: '20px' }}>
+          <iframe
+            width="560"
+            height="315"
+            style={{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%' }}            src="https://www.youtube.com/embed/JwE3L8tmpJI?si=e84DZqRZPF9jHIkN"
+            title="YouTube video player"
+            frameBorder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerPolicy="strict-origin-when-cross-origin"
+            allowFullScreen
+          ></iframe>
+        </div>
 
 <Callout emoji="📂" type="info">
   Projects provide a structured way to organize and restrict access to various
