--- a/pages/workflows.mdx
+++ b/pages/workflows.mdx
@@ -6,17 +6,33 @@ Lecca.io's Workflow tools allow you to automate a series of actions. Workflows c
 
 ## Getting Started
 
-        <iframe
-          width="560"
-          height="315"
-          style={{ marginTop: '20px' }}
-          src="https://www.youtube.com/embed/2V7A3IpyJbo?si=4RUriV0AB5bevQy1"
-          title="YouTube video player"
-          frameBorder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerPolicy="strict-origin-when-cross-origin"
-          allowFullScreen
-        ></iframe>
+<div
+  style={{
+    position: 'relative',
+    paddingBottom: '56.25%',
+    height: 0,
+    overflow: 'hidden',
+    marginTop: '20px',
+  }}
+>
+  <iframe
+    width="560"
+    height="315"
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+    }}
+    src="https://www.youtube.com/embed/2V7A3IpyJbo?si=4RUriV0AB5bevQy1"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerPolicy="strict-origin-when-cross-origin"
+    allowFullScreen
+  ></iframe>
+</div>
 
 Creating an effective workflow starts with understanding its purpose. Here are the three primary reasons you might create a workflow on Lecca.io:
 
