--- a/pages/workflows.mdx
+++ b/pages/workflows.mdx
@@ -25,7 +25,7 @@ Lecca.io's Workflow tools allow you to automate a series of actions. Workflows c
       width: '100%',
       height: '100%',
     }}
-    src="https://www.youtube.com/embed/2V7A3IpyJbo?si=4RUriV0AB5bevQy1"
+    src="https://www.youtube.com/embed/csDLgJSMg-A?si=1c1zBpdwo4peTX7y"
     title="YouTube video player"
     frameBorder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
