--- a/pages/apps/web.mdx
+++ b/pages/apps/web.mdx
@@ -15,6 +15,10 @@ Lecca.io provides a Web tool that allows users to access the web using pre-built
 
 The "Extract Website Content" action allows you to retrieve and extract content from a specified website. This can be useful for gathering information, data analysis, or content curation.
 
+### Extract Static Website Content
+
+The "Extract Static Website Content" only works on websites that load html and don't need Javascript to load data.
+
 ### Google Search
 
 The "Google Search" action enables you to perform a search on Google and retrieve the results. This can be used for research, finding information quickly, or automating search tasks.
