--- a/pages/apps/zoho-crm.mdx
+++ b/pages/apps/zoho-crm.mdx
@@ -36,6 +36,10 @@ Remove a user from your Zoho CRM account. This action helps you manage user acce
 
 Trigger an event when a new contact is added to Zoho CRM. This allows you to automate workflows based on new contact creation.
 
+### New Lead
+
+Trigger an event when a new lead is added to Zoho CRM. This allows you to automate workflows based on new lead creation.
+
 ## Connections
 
 Zoho CRM integration uses OAuth2 for authentication and is available for US servers only (.com).
