--- a/pages/apps/notion.mdx
+++ b/pages/apps/notion.mdx
@@ -2,29 +2,59 @@ import { Callout } from 'nextra/components';
 
 # Notion Integration
 
-Notion is a single space where you can think, write, and plan. With the Notion integration on Lecca.io, you can automate your workflows by creating and appending pages directly from your AI Agents.
+Notion is a versatile platform where you can organize, write, and plan your projects. With the Notion integration on Lecca.io, you can automate your workflows by creating, updating, and managing Notion content directly from your AI Agents.
 
 ## Actions
 
 ### Create Page
 
-Create a new page in your Notion workspace. This action allows you to automate the creation of pages, making it easier to organize your thoughts and plans without manual input.
+Create a new page in your Notion workspace. Automate the creation of pages to efficiently organize your thoughts and plans without manual input.
 
 ### Append Page
 
-Append content to an existing page in your Notion workspace. Use this action to add information or updates to your existing pages seamlessly.
+Append content to an existing page in your Notion workspace. Use this action to seamlessly add information or updates to your pages.
+
+### Add Database Page
+
+Add a new page to a specific database in your Notion workspace. This action allows you to populate your databases programmatically.
+
+### Update Database Page
+
+Update an existing page in a Notion database. This action keeps your database entries current with automated modifications.
+
+### Get Page Contents
+
+Retrieve content from a specific page in your Notion workspace. Use this action to access and display page content as part of your workflows.
+
+### List Databases
+
+List all databases within your Notion workspace. This action helps in selecting and organizing databases for further actions.
+
+### Get Database
+
+Retrieve information about a specific database in your Notion workspace, providing detailed metadata for workflow setup.
 
 <Callout emoji="🚀" type="info">
-  More actions are coming soon to enhance your Notion automation experience!
+  More actions are coming soon to expand your Notion automation options!
 </Callout>
 
 ## Triggers
 
-There are currently no triggers available for the Notion integration.
+### Page Updated
+
+Trigger your workflow whenever a page in your Notion workspace is updated.
+
+### New Database Page
+
+Trigger workflows upon the creation of a new page in any specified database.
+
+### Database Page Updated
+
+Trigger workflows whenever an existing page in a database is modified.
 
 ## Connections
 
-The Notion integration uses OAuth 2 for secure and seamless authentication. This ensures that your data is protected while allowing Lecca.io to interact with your Notion workspace.
+The Notion integration uses OAuth 2 for secure and seamless authentication, ensuring your data is protected while enabling Lecca.io to interact with your Notion workspace.
 
 <Callout emoji="🔒" type="info">
   For any issues or support, please contact us at
