--- a/pages/apps/ai.mdx
+++ b/pages/apps/ai.mdx
@@ -22,6 +22,8 @@ Here are the available AI actions offered by Lecca.io:
 
 - **Summarize Text**: This action condenses large volumes of text into concise summaries using AI technology.
 
+- **List Agents**: Lists all the agents available within the project.
+
 ## Triggers
 
 Currently, there are no triggers available for this integration.
