--- a/pages/apps/knowledge.mdx
+++ b/pages/apps/knowledge.mdx
@@ -1,8 +1,8 @@
 import { Callout } from 'nextra/components';
 
-# Knowledge App Integration
+# Knowledge Integration
 
-The Knowledge app integration allows you to utilize Lecca.io knowledge notebooks to store and retrieve information efficiently.
+The Knowledge allows you to utilize Lecca.io knowledge notebooks to store and retrieve information efficiently.
 
 <Callout>This step uses Credits</Callout>
 
@@ -11,6 +11,18 @@ The Knowledge app integration allows you to utilize Lecca.io knowledge notebooks
 ### Search Knowledge
 
 The "Search Knowledge" action enables you to search within your selected knowledge notebook, allowing you to quickly find the information you need.
+
+### Save to Knowledge
+
+Saves new text data to a knowledge notebook. You can only select notebooks available within the project.
+
+### List Knowledge Notebooks
+
+Lists all knowledge notebooks avaialble within the project. This includes workspace and project notebooks.
+
+### Create Knowledge Notebooks
+
+Creates a new knowledge notebook. You can select whether to save the notebook to the project or workspace.
 
 ## Triggers
 
