--- a/pages/apps/date.mdx
+++ b/pages/apps/date.mdx
@@ -10,6 +10,14 @@ The Date Helper app integration is a utility provided by Lecca.io to assist with
 
 The "Get Current Date" action retrieves the current date. This is useful for workflows that require date-based automation or logging.
 
+### Add/Subtract Time
+
+Allows you to add or subtract time from a given date. You can select from seconds to years as the modifiers.
+
+### Format Date
+
+Convert a date's format into another for better readability.
+
 ## Triggers
 
 There are no triggers available for the Date Helper app integration.
