docs: Add ai-providers.mdx and credits.mdx

--- a/pages/apps/openai.mdx
+++ b/pages/apps/openai.mdx
@@ -16,7 +16,7 @@ There are no triggers available for the OpenAI integration at this time.
 
 ## Connections
 
-To connect to OpenAI, you will need an API key. This key allows you to authenticate and interact with the OpenAI API securely. Make sure to keep your API key confidential and only use it in secure environments.
+To connect to OpenAI, you will need an API key. This key allows you to authenticate and interact with the OpenAI API securely.
 
 <Callout emoji="🔑" type="info">
   For assistance with obtaining or using your API key, please contact our
